fixed mozilla title spacing

--- a/scss/desktop.scss
+++ b/scss/desktop.scss
@@ -69,7 +69,7 @@ canvas {
     padding: 0 5vw;
 
     h1 {
-      font-size: 3.75vw;
+      font-size: 3.6vw;
       opacity: 0;
       animation: fadeInDown 1s ease-out 0.25s forwards;
       font-family: "Megrim";
